--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -74,7 +74,7 @@
                         -->
 
                     <div id="nav-de-malade">
-                        <ul class="list-group">
+                        <ul class="list-group" data-content="menu">
                             <li><a href="/Accueil/">Accueil</a></li>
                             <li><a href="/trajet/">Vos trajets</a></li>
                             <li><a href="/meteo/">Votre météo</a></li>
