--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -81,6 +81,7 @@
                             <li><a href="/spotify/playlists/">Vos playlist Spotify</a></li>
                             <li><a href="/vos-articles/">Vos articles</a></li>
                             <li><a href="/vos-visites/">Vos visites</a></li>
+                            <li><a href="/parameters/">Paramêtres</a></li>
                         </ul>
                     </div>
                 </nav>
