--- a/views/parameters.ejs
+++ b/views/parameters.ejs
@@ -8,6 +8,18 @@
             <!-- /.col-lg-12 -->
             <div id="wrapper">
                 <div id="page-wrapper">
+                    <div class="row">
+                      <div class="col-md-12">
+                      <% if (loginSpotify) { %>
+                        <a href="/spotify/deco">Déconnexion spotify</a> 
+                      <% } else { %>
+                        <a href="/spotify/login" data-content="connexion Spotify" class="btn btn-primary">Connexion Spotify</a>
+                      <% } %>
+                      </div>
+                      <div class="col-md-12">
+                        <a data-content="connexion Spotify" class="btn btn-primary" href="/voice">Active voice</a>
+                      </div>
+                    </div>
                     <!-- /.row -->
                     <div class="row">
                       <table>
