Voice helper + show + trajet

--- a/views/parameters.ejs
+++ b/views/parameters.ejs
@@ -38,16 +38,52 @@
                           </thead>
                           <tbody>
                             <tr>
-                              <td>Command 1</td>
-                              <td>Info 1</td>
+                              <td>Ouvrir</td>
+                              <td>Ouvre le menu</td>
                             </tr>
                             <tr>
-                              <td>Command 2</td>
-                              <td>Info 2</td>
+                              <td>Fermer</td>
+                              <td>Ferme le menu</td>
                             </tr>
                             <tr>
-                              <td>Command 3</td>
-                              <td>Info 3</td>
+                              <td>Lire menu</td>
+                              <td>Lis le menu</td>
+                            </tr>
+                            <tr>
+                              <td>Go 'nom de la rubrique'</td>
+                              <td>Naviguation dans le menu</td>
+                            </tr>
+                            <tr>
+                              <td>Lire 'nom de la liste a lire'</td>
+                              <td>Lis une liste playlist par exemple</td>
+                            </tr>
+                            <tr>
+                              <td>Clique 'nom de la balise <a>'</td>
+                              <td>clique sur un lien <a></td>
+                            </tr>
+                            <tr>
+                              <td>Valider</td>
+                              <td>Envoi un formulaire <a></td>
+                            </tr>
+                            <tr>
+                              <td>Ecrire playlist</td>
+                              <td>Focus sur l'input de l'ajout d'une playlist <a></td>
+                            </tr>
+                            <tr>
+                              <td>Lecture</td>
+                              <td>Lis ou arrete une lecture de playlist spotify <a></td>
+                            </tr>
+                            <tr>
+                              <td>Meteo</td>
+                              <td>Sur la page d'accueil, donne la température <a></td>
+                            </tr>
+                            <tr>
+                              <td>Meteo aujourd'hui</td>
+                              <td>Donne les infos méteo pour aujourd'hui <a></td>
+                            </tr>
+                            <tr>
+                              <td>Retour</td>
+                              <td>Retour sur la dernière page chargée <a></td>
                             </tr>
                           </tbody>
                       </table>
