--- a/views/trajets.ejs
+++ b/views/trajets.ejs
@@ -39,7 +39,7 @@
 
                                             </div>
                                             <div class="col-xs-3">
-                                                <a href="/trajet/show/<%= info.id %>" class="btn btn-primary" data-content="voir <%= info.id %>"><i class="fa fa-eye" aria-hidden="true"></i></a>
+                                                <a href="/trajet/show/<%= info.id %>" class="btn btn-primary" data-content="accéder <%= info.id %>"><i class="fa fa-eye" aria-hidden="true"></i></a>
                                                 <form action="/trajet/delete" method="POST" style="display:inline-block;" ;>
 
                                                     <input type="hidden" name="idvoyage" id="idvoyage" value="<%= info.id %>">
