--- a/app/src/sass/test.scss
+++ b/app/src/sass/test.scss
@@ -75,7 +75,11 @@ body {
   margin: 0;
   padding: 0;
   background-image: url(../image/dashboard/wall3.jpg);
-  background-size: cover;
+
+  background-position: center center;
+  background-size: cover !important;   
+  min-height: 100vh;
+  height: 100%;
 }
 
 .container-demo {
@@ -280,7 +284,7 @@ filter:progid:DXImageTransform.Microsoft.Shadow(color=rgba(101, 101, 101, 0.22),
 
   .list-group a {
     text-decoration: none;
-    color: #8c8c8c;
+    color: #a0a0a0;
     font-weight: 700;
     -webkit-transition: all .3s ease-in;
        -moz-transition: all .3s ease-in;
@@ -296,10 +300,9 @@ filter:progid:DXImageTransform.Microsoft.Shadow(color=rgba(101, 101, 101, 0.22),
     position: absolute;
     left: 50%;
     right: 50%;
-    top: 100%;
     height: 3px;
     z-index: -1;
-    bottom: 25px;
+    bottom: 14px;
     max-width: 21%;
     margin: auto;
     content: "";
@@ -336,11 +339,13 @@ filter:progid:DXImageTransform.Microsoft.Shadow(color=rgba(101, 101, 101, 0.22),
   -webkit-transition: .3s;
   transition: .3s;
   color: #5a5a5a;
+  border-bottom-right-radius: 8px;
+  border-bottom-left-radius: 8px;
 }
 
 .button:hover {
     cursor: pointer;
-    color: #95f384;
+    color: #50ef94;
     background: rgba(255, 255, 255, 0.97);
 }
 
@@ -356,7 +361,7 @@ filter:progid:DXImageTransform.Microsoft.Shadow(color=rgba(101, 101, 101, 0.22),
     width: 20%;
     bottom: -58px;
     left: -55px;
-    background: #95f384;
+    background: #50ef94;
     height: 100%;
     -webkit-transform: skewX(15deg);
     transform: skewX(15deg);
@@ -371,7 +376,7 @@ filter:progid:DXImageTransform.Microsoft.Shadow(color=rgba(101, 101, 101, 0.22),
 }
 
 .panel {
-  background:rgba(255, 255, 255, 0.28);
+  background:rgba(6, 6, 6, 0.38) !important;
   -moz-box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.52);
   -webkit-box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.52);
   -o-box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.52);
