--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -87,7 +87,7 @@
                 </nav>
 
     <% } %>
-    <div class="container">
+    <div class="container webWrap">
  <%-body%>
 
         <script type="text/javascript">
