--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,33 +1,21 @@
-<!DOCTYPE html>
-<html>
-  <head>
-  	<meta charset="UTF-8">
-    	<title><%= title %></title>
-		<title>Connexion</title>
-    <link rel='stylesheet' href='/stylesheets/stylePageLogin.css' />
-    <link rel='stylesheet prefetch' href='http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css'>
-  </head>
-
-
-  <body>
-
-    <h1 class='titreLogo'> Pimp My road </h1>
-        <div class="wrapper">
-          <form class="connexion-form-signin" action="/users/login" method="POST">
-            <h2 class="connexion-form-signin-heading">Connexion</h2>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3 logo">
+          <img src="image/logo/logo1.png">
+        </div>
+      </div>
+      <div class="row">
+        <div class="login col-md-6 col-md-offset-3">
+          <form class="connexion-form-signin panel" action="/users/login" method="POST">
               <input type="text" class="form-control" name="_username" placeholder="Adresse mail ou identifiant" required="" autofocus="" />
               <input type="password" class="form-control" name="_password" placeholder="Mots de passe" required=""/>
               <label class="connexion-checkbox">
                 <input type="checkbox" value="remember-me" id="connexionrememberMe" name="rememberMe"> Se souvenir de moi
-              </label>
-              <button class="btn btn-lg btn-primary btn-block" type="submit">Envoyer</button>
-              <a class='lienCreationCompte' href="/creationCompte" target="_blank"> Inscription </a>
+              </label><br>
+              <button class="button buttonVert" type="submit">Envoyer</button>
+              <a class='lienCreationCompte button' href="/creationCompte" target="_blank"> Inscription </a>
           </form>
-
         </div>
-
-  </body>
-</html>
+      </div>
 
 
 
