--- a/views/dashboardAccueil.ejs
+++ b/views/dashboardAccueil.ejs
@@ -32,7 +32,7 @@
                                     <i class="fa fa-tasks fa-5x"></i>
                                 </div>
                                 <div class="col-xs-12 text-center info-badge">
-                                    <div id="meteo" class="huge"></div>
+                                    <div id="playMeteo" class="huge"></div>
                                     <div id="description"></div>
                                     <div>Météo</div>
                                 </div>
@@ -130,7 +130,7 @@
       //alert('hello')
 
 
-        $('#meteo').html(extractdata(data));
+        $('#playMeteo').html(extractdata(data));
         $('#description').html(extractdata2(data));
       })
       </script>
