--- a/views/dashboardAccueil.ejs
+++ b/views/dashboardAccueil.ejs
@@ -7,7 +7,7 @@
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-xs-12 info-ico">
-                                    <i class="fa fa-comments fa-5x"></i>
+                                    <i class="fa fa-road fa-5x"></i>
                                 </div>
                                 <div class="col-xs-12 text-center info-badge">
                                     <div class="huge"><%= trajets.length %></div>
@@ -29,12 +29,11 @@
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-xs-12 info-ico">
-                                    <i class="fa fa-tasks fa-5x"></i>
+                                    <i class="fa fa-sun-o fa-5x"></i>
                                 </div>
                                 <div class="col-xs-12 text-center info-badge">
                                     <div id="meteo" class="huge"></div>
                                     <div id="description"></div>
-                                    <div>Météo</div>
                                 </div>
                             </div>
                         </div>
