--- a/app/src/css/stylePageLogin.css
+++ b/app/src/css/stylePageLogin.css
@@ -79,21 +79,36 @@
     max-width: 50px;
 }
 
+.creation .login:before {
+    content: "Inscription";
+    color: rgba(6, 6, 6, 0.38);
+    display: block;
+    position: relative;
+    top: 16px;
+    font-size: 3em;
+    text-transform: uppercase;
+    font-weight: bold;
+    left: 4%;
+    text-align: center;
+    max-width: 50px;
+}
+
 .login {
   margin-top: 4%;
 }
 
 .login input.form-control {
-  margin-bottom: 15px;
-  border-radius: 0!important;
-  background-color: #50EF94;
-  border: none;
-  border: 4px solid transparent;
-  color: white;
+    margin-bottom: 15px;
+    border-radius: 0!important;
+    background-color: rgba(45, 45, 45, 0.42);
+    border: none;
+    border: 4px solid #50ef94;
+    color: white;
 }
 
 .login input:focus {
   border: 4px solid white;
+  background-color: #50ef94;
 }
 
 .login label {
@@ -141,4 +156,10 @@ input[type=checkbox] {
 
 .login a {
   text-decoration: none !important;
+}
+
+.login .btn-tarace {
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 18px;
 }
