--- a/app/src/css/stylePageMeteo.css
+++ b/app/src/css/stylePageMeteo.css
@@ -4,13 +4,18 @@
 	font-size : 40px;
 }
 .jour{
-	background-color: rgba(255, 255, 255, 0.28);
-	border-bottom: 1px solid white;
+	    background-color: rgba(6, 6, 6, 0.38);
+    padding: 30px 0;
+    color: white;
+    border-bottom: 1px solid white;
 }
 
 .semaine{
-	background-color: rgba(255, 255, 255, 0.28);
-	text-align: center;
+	  background-color: rgba(6, 6, 6, 0.38);
+    padding: 30px 0;
+    color: white;
+    border-bottom: 1px solid white;
+    text-align: center;
 }
 
 .blockTemps{
