--- a/views/trajets.ejs
+++ b/views/trajets.ejs
@@ -1,8 +1,8 @@
-        <div id="page-wrapper">
+        <div id="page-wrapper" class="trajet">
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="page-header">VOS TRAJETS</h1>
-                    <a href="/trajet/creation/">Création</a>
+                    <a href="/trajet/creation/" class="btn btn-success">Création</a>
 
                 </div>
             <!-- /.col-lg-12 -->
@@ -18,27 +18,27 @@
                         <div class="panel-body">
 
                            <!--  <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">-->
-                                    <div class="row">
-                                        <div class="col-xs-3">Numéro</div>
-                                        <div class="col-xs-3">Départ</div>
-                                        <div class="col-xs-3">Arrivé</div>
-                                        <div class="col-xs-3">Paramètres</div>
+                                    <div class="row title">
+                                        <div class="col-xs-3 head">Numéro</div>
+                                        <div class="col-xs-3 head">Départ</div>
+                                        <div class="col-xs-3 head">Arrivé</div>
+                                        <div class="col-xs-3 head">Paramètres</div>
                                     </div>
                                     <% trajets.forEach(function(info) { %>
                                         <div class="row">
-                                            <div class="col-xs-3" data-content="lire trajet">
+                                            <div class="col-xs-3 table2" data-content="lire trajet">
 
                                                 Trajet numéro  <%= info.id %>
                                             </div>
-                                            <div class="col-xs-3" data-content="lire trajet">
+                                            <div class="col-xs-3 table2" data-content="lire trajet">
 
                                                 <%= info.start %>
                                             </div>
-                                            <div class="col-xs-3" data-content="lire trajet">
+                                            <div class="col-xs-3 table2" data-content="lire trajet">
                                                 <%= info.end %>
 
                                             </div>
-                                            <div class="col-xs-3">
+                                            <div class="col-xs-3 table2">
                                                 <a href="/trajet/show/<%= info.id %>" class="btn btn-primary" data-content="accéder <%= info.id %>"><i class="fa fa-eye" aria-hidden="true"></i></a>
                                                 <form action="/trajet/delete" method="POST" style="display:inline-block;" ;>
 
@@ -48,6 +48,7 @@
                                                 </form>
                                             </div>
                                         </div>
+
                                         <% }); %>
 
                              <!--   </table>-->
