--- a/views/meteo.ejs
+++ b/views/meteo.ejs
@@ -26,13 +26,13 @@
                             <div id="city" class="ville">
                             </div>
                         </div>
-                        <div id='description' class="description"></div>
+                        <div id='description1' class="description"></div>
                         <div class="tempMaximumBlock col-xs-12">
                             <div id="tempMax1" class="temperaturemax"></div>
-                        </div> 
+                        </div>
                         <div class="tempMinimumBlock col-xs-12">
                             <div id="tempMin1" class="temperaturemin"></div>
-                        </div> 
+                        </div>
 
                     </div>
 
@@ -117,14 +117,12 @@
                 console.log(data);
                 $('#meteo').html(extractdata(data));
                 $('#city').html(extractdatacity(data));
-            
+
                 var j = 1;
                 for (var i = 1; i <= 5; i++) {
-                    console.log(i)
-                    if(i !== 1) {
-                        $('#date'+i).html(extractdatadate(data, j));
-                    }
-                    $('#ico'+i).html(extractdataico(data, j));                    
+
+                    $('#date'+i).html(extractdatadate(data, j));
+                    $('#ico'+i).html(extractdataico(data, j));
                     $('#description'+i).html(extractdatadesc(data, j));
                     $('#tempMin'+i).html(extractdatamin(data, j));
                     $('#tempMax'+i).html(extractdatamax(data, j));
@@ -139,7 +137,7 @@
             return tab_jour[date.getDay()];
         }
         function extractdata(data) {
-            var maChaine = JSON.stringify(data.list[0].main.temp) 
+            var maChaine = JSON.stringify(data.list[0].main.temp)
             maChaine = maChaine.substring(0, maChaine.length-3) + '°'
             return maChaine ;
         }
@@ -148,19 +146,19 @@
             return description ;
         }
         function extractdatamin(data, i) {
-            var temperatureMin = JSON.stringify(data.list[i].main.temp_min) 
+            var temperatureMin = JSON.stringify(data.list[i].main.temp_min)
             temperatureMin = temperatureMin.substring(0, temperatureMin.length-3) + '°'
             return temperatureMin ;
         }
         function extractdatamax(data, i) {
-            var temperatureMax = JSON.stringify(data.list[i].main.temp_max) 
+            var temperatureMax = JSON.stringify(data.list[i].main.temp_max)
             temperatureMax = temperatureMax.substring(0, temperatureMax.length-3) + '°'
             return temperatureMax ;
         }
         function extractdatacity(data) {
             var city = data.city.name
             return city ;
-        }   
+        }
 
         function extractdataico(data, i) {
             /*peu nuageux*/
@@ -204,7 +202,7 @@
                 var ico = "<svg class='rain-cloud' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 512 512'><path class='raindrop-one' d='M96,384c0,17.7,14.3,32,32,32s32-14.3,32-32s-32-64-32-64S96,366.3,96,384z' /><path class='raindrop-two' d='M225,480c0,17.7,14.3,32,32,32s32-14.3,32-32s-32-64-32-64S225,462.3,225,480z' /><path class='raindrop-three' d='M352,448c0,17.7,14.3,32,32,32s32-14.3,32-32s-32-64-32-64S352,430.3,352,448z' /><path d='M400,64c-5.3,0-10.6,0.4-15.8,1.1C354.3,24.4,307.2,0,256,0s-98.3,24.4-128.2,65.1c-5.2-0.8-10.5-1.1-15.8-1.1 C50.2,64,0,114.2,0,176s50.2,112,112,112c13.7,0,27.1-2.5,39.7-7.3c29,25.2,65.8,39.3,104.3,39.3c38.5,0,75.3-14.1,104.3-39.3 c12.6,4.8,26,7.3,39.7,7.3c61.8,0,112-50.2,112-112S461.8,64,400,64z M400,256c-17.1,0-32.9-5.5-45.9-14.7 C330.6,269.6,295.6,288,256,288c-39.6,0-74.6-18.4-98.1-46.7c-13,9.2-28.8,14.7-45.9,14.7c-44.2,0-80-35.8-80-80s35.8-80,80-80 c10.8,0,21.1,2.2,30.4,6.1C163.7,60.7,206.3,32,256,32s92.3,28.7,113.5,70.1c9.4-3.9,19.7-6.1,30.5-6.1c44.2,0,80,35.8,80,80 S444.2,256,400,256z' /> </svg>"
             }
             return ico ;
-        }    
+        }
 //+ JSON.stringify(data.message)
         function error(err) {
           socket.emit('localization', {err: `ERROR(${err.code}): ${err.message}` });
