--- a/views/dashboardAccueil.ejs
+++ b/views/dashboardAccueil.ejs
@@ -2,7 +2,7 @@
 <div class="page-wrap">
             <!-- /.row -->
             <div class="row">
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-4 col-md-6">
                     <div class="panel">
                         <div class="panel-heading">
                             <div class="row">
@@ -24,7 +24,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-4 col-md-6">
                     <div class="panel">
                         <div class="panel-heading">
                             <div class="row">
@@ -46,12 +46,12 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-4 col-md-6">
                     <div class="panel">
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-xs-12 info-ico">
-                                    <i class="fa fa-shopping-cart fa-5x"></i>
+                                    <i class="fa fa-music fa-5x"></i>
                                 </div>
                                 <div class="col-xs-12 text-center info-badge">
                                     <div class="huge">20</div>
