--- a/views/parameters.ejs
+++ b/views/parameters.ejs
@@ -26,7 +26,7 @@
                       </div>
                     </div>
                     <!-- /.row -->
-                    <div class="row">
+                    <div class="row pown">
                       <table>
                           <thead>
                               <th>
